third_party/rust/cxx/v1/crate/tests/ui/result_no_display.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        fn f() -> Result<()>;
    }
}

pub struct NonError;

fn f() -> Result<(), NonError> {
    Ok(())
}

fn main() {}
